created multiple portfolio pages templates for content generation

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
     <!-- Clients section -->
     <section class="clients">
         <div class="container">
-            <h3>I work with awesome people.</h3>
+            <h3>I work with some awesome people.</h3>
             <p>I love working with clients on all sorts of challenging projects for illusration, branding, web design and small-scale animation. We ultimately look to do one thing: communicate through visual design.</p>
 
             <ul class="list-inline list-logos">
@@ -98,25 +98,25 @@
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo otis-logo-2"></span>
                     <h6>Otis Elevator</h6>
                 </li>
-
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo logo-proctorgamble"></span>
+                    <h6>Proctor &amp; Gamble</h6>
+                </li>
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo bbdo-logo"></span>
                     <h6>BBDO</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo redcross-logo"></span>
-                    <h6>Red Cross</h6>
-                </li>
-                <!--<li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo dagwoods-logo"></span>
-                    <h6>Dagwoods</h6>
-                </li>-->
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo citizenrelations-logo"></span>
                     <h6>Citizen Relations</h6>
-                </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo mtlblog-logo"></span>
-                    <h6>MTL Blog</h6>
                 </li>
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo logo-station16"></span>
                     <h6>Station 16 Gallery</h6>
                 </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo redcross-logo"></span>
+                    <h6>Red Cross</h6>
+                </li>
+                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo mtlblog-logo"></span>
+                    <h6>MTL Blog</h6>
+                </li>
+
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo suite88-logo"></span>
                     <h6>Suite 88 Chocolatier</h6>
                 </li>
@@ -126,21 +126,9 @@
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo tweetaide-logo"></span>
                     <h6>Tweetaide</h6>
                 </li>
-                <!--<li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo fortnine-logo"></span>
-                    <h6>Fortnine</h6>
-                </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo btsm-logo"></span>
-                    <h6>Black Tiger Sex Machine</h6>
-                </li>-->
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo kevric-logo"></span>
                     <h6>Kevric</h6>
                 </li>
-                <!--<li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo springboard-logo"></span>
-                    <h6>Springboard</h6>
-                </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo logo-nutritionr"></span>
-                    <h6>Nutritionr</h6>
-                </li>-->
                 <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo logo-kalooba"></span>
                     <h6>Kalooba</h6>
                 </li>
