--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <section class="portfolio">
 
             <div class="row">
-                <div class="container">
+                <div class="container" id="montreal">
                     <h3 id="selectedProjects">Selected projects</h3>
                     <h4>A selection of awesome design projects for different clients. These projects include illustration, animation, app visual design, packaging, web graphics and print.</h4>
                 </div>
@@ -113,7 +113,7 @@
                         </span>
                     </a>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6" id="starbucks">
                     <a href="projects/starbucks-cityscape-illustration.html">
                         <div class="outer">
                             <div class="inner portfolio-starbucks"></div>
@@ -129,8 +129,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6">
-                    <a href="#!">
+                <div class="col-sm-6" id="ets">
+                    <a href="projects/ets-cityline-illustration.html">
                         <div class="outer">
                             <div class="inner portfolio-ets"></div>
                             <div class="portfolio-text bottom no-gradient text-dark">
@@ -143,8 +143,8 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-sm-6">
-                    <a href="#!">
+                <div class="col-sm-6"  id="car2go">
+                    <a href="projects/car2go-cityline-illustration.html">
                         <div class="outer">
                             <div class="inner portfolio-car2go"></div>
                             <div class="portfolio-text top no-gradient text-light">
@@ -158,8 +158,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6">
-                    <a href="#!">
+                <div class="col-sm-6" id="swiffer">
+                    <a href="projects/swiffer-marketing-graphics.html">
                         <div class="outer">
                             <div class="inner portfolio-swiffer"></div>
                             <div class="portfolio-text bottom text-light">
@@ -172,8 +172,8 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-sm-6">
-                    <a href="#!">
+                <div class="col-sm-6" id="upa">
+                    <a href="projects/upa-cityline-illustration.html">
                         <div class="outer">
                             <div class="inner portfolio-upa"></div>
                             <div class="portfolio-text top no-gradient text-light">
@@ -188,8 +188,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6">
-                    <a href="#!">
+                <div class="col-sm-6" id="travelSmart">
+                    <a href="projects/travel-smart-canada-app.html">
                         <div class="outer">
                             <div class="inner portfolio-travel-smart"></div>
                             <div class="portfolio-text bottom text-light">
@@ -203,8 +203,8 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-sm-6">
-                    <a href="#!">
+                <div class="col-sm-6" id="suite88">
+                    <a href="projects/suite88-cityline-illustration.html">
                         <div class="outer">
                             <div class="inner portfolio-suite88"></div>
                             <div class="portfolio-text bottom no-gradient text-dark">
@@ -219,8 +219,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6">
-                    <a href="#!">
+                <div class="col-sm-6" id="otis">
+                    <a href="projects/otis-elevator-animated-gif.html">
                         <div class="outer">
                             <div class="inner portfolio-otis"></div>
                             <div class="portfolio-text bottom no-gradient text-dark">
@@ -233,8 +233,8 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-sm-6">
-                    <a href="#!">
+                <div class="col-sm-6" id="innolab">
+                    <a href="projects/global-affairs-canada-innovation-space.html">
                         <div class="outer">
                             <div class="inner portfolio-innovation-space"></div>
                             <div class="portfolio-text top text-light">
