--- a/projects/car2go-cityline-illustration.html
+++ b/projects/car2go-cityline-illustration.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Illustration of Montreal's Cityscape by Loogart. Created by Loogart for various cities - coined as a CityLine - such as Toronto, Ottawa, Zurich, New York, Los Angeles, Canada.">
+    <meta name="description" content="CityLine illustration commissioned by car2go Montréal for partner giveaways, accessories and print.">
     <meta name="author" content="Chris Soueidan of Loogart">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Montreal CityLine Illustration | Loogart</title>
+    <title>car2go CityLine Illustration | Loogart</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.css" rel="stylesheet">
@@ -52,7 +52,7 @@
     </nav>
 
     <!-- champion image -->
-    <div class="project-jumbotron project-montreal-cityline-img">
+    <div class="project-jumbotron project-car2go-cityline-img">
 
 
     </div>
@@ -67,7 +67,7 @@
                 <p class="cta-back">
                     <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
-                <h1>Montréal CityLine Illustration</h1>
+                <h1>car2go CityLine Illustration</h1>
                 <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium corrupti ab sapiente quas, aperiam, ducimus ut qui laudantium eveniet atque harum dolore ipsum voluptas ea modi vel dolor nostrum ullam.</h4>
             </div>
         </div>
@@ -80,7 +80,7 @@
             <div class="row">
 
                 <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
+                    <img class="img-responsive img-portfolio" src="../img/logo-car2go.png" style="width:200px">
                     <h3>Title Half</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
                 </div>
