--- a/projects/starbucks-cityscape-illustration.html
+++ b/projects/starbucks-cityscape-illustration.html
@@ -52,7 +52,7 @@
     </nav>
 
     <!-- champion image -->
-    <div id="pic1" class="project-jumbotron project-starbucks-img"></div>
+    <div class="project-jumbotron project-starbucks-img"></div>
 
 
     <div class="container">
@@ -158,7 +158,7 @@
                     <ul class="list-unstyled">
                         <li><a href="http://facebook.com/loogart">Facebook</a></li>
                         <li><a href="http://instagram.com/loogart">Instagram</a></li>
-                        <li><a href="#!">Email us</a></li>
+                        <li><a href="../contact.html">Email us</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4">
