more tiles tests

--- a/tiles/index.html
+++ b/tiles/index.html
@@ -39,6 +39,12 @@
         margin: 40px auto 50px;
     }
     
+    .tile-phone {
+        width: 320px;
+        height: 569px;
+        margin: 40px auto 50px;
+    }
+    
     h4 {
         margin: 0 auto 12px;
         font-size: 21px;
@@ -168,10 +174,10 @@
                 <h4>UPA CityLine</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quisquam autem, suscipit minima iste, reprehenderit neque architecto facere aut quos, cumque nisi dicta iure unde placeat, aliquam perspiciatis sapiente? Earum.</p>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-8">
                 <a href="index.html">
                     <div class="tile atvImg">
-                        <img src="flat.jpeg">
+                        <img src="images/ets-phone-flat.png">
                         <div class="atvImg-layer" data-img="images/ets-back.png"></div>
                         <div class="atvImg-layer" data-img="images/ets-middle.png"></div>
                         <div class="atvImg-layer" data-img="images/ets-front.png"></div>
@@ -179,6 +185,53 @@
                 </a>
                 <h4>ETS CityLine</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quisquam autem, suscipit minima iste, reprehenderit neque architecto facere aut quos, cumque nisi dicta iure unde placeat, aliquam perspiciatis sapiente? Earum.</p>
+            </div>
+            <div class="col-sm-4">
+                <a href="index.html">
+                    <div class="tile-phone atvImg">
+                        <img src="images/ets-phone-flat.png">
+                        <div class="atvImg-layer" data-img="images/ets-phone-back.png"></div>
+                        <div class="atvImg-layer" data-img="images/ets-phone-middle.png"></div>
+                        <div class="atvImg-layer" data-img="images/ets-phone-front.png"></div>
+                    </div>
+                </a>
+                <h4>ETS Snapchat Filter</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="col-sm-4">
+                <a href="index.html">
+                    <div class="tile-phone atvImg">
+                        <img src="images/ts-phone-flat.png">
+                        <div class="atvImg-layer" data-img="images/ts-phone-back.png"></div>
+                        <div class="atvImg-layer" data-img="images/ts-phone-middle.png"></div>
+                        <div class="atvImg-layer" data-img="images/ts-phone-front.png"></div>
+                    </div>
+                </a>
+                <h4>Travel Smart App</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="col-sm-4">
+                <a href="index.html">
+                    <div class="tile-phone atvImg">
+                        <img src="images/ts-splash-flat.png">
+                        <div class="atvImg-layer" data-img="images/ts-splash-back.png"></div>
+                        <div class="atvImg-layer" data-img="images/ts-splash-front.png"></div>
+                    </div>
+                </a>
+                <h4>Travel Smart App</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+                        <div class="col-sm-4">
+                <a href="index.html">
+                    <div class="tile-phone atvImg">
+                        <img src="images/ts-screen-flat.png">
+                        <div class="atvImg-layer" data-img="images/ts-screen-back.png"></div>
+                        <div class="atvImg-layer" data-img="images/ts-screen-middle.png"></div>
+                        <div class="atvImg-layer" data-img="images/ts-screen-front.png"></div>
+                    </div>
+                </a>
+                <h4>Travel Smart App</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
 
         </div>
