--- a/about.html
+++ b/about.html
@@ -77,59 +77,54 @@
             <p>I love working with clients on all sorts of challenging projects for illusration, branding, web design and small-scale animation. We ultimately look to do one thing: communicate through visual design.</p>
 
             <ul class="list-inline list-logos">
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo starbucks-logo"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo starbucks-logo"></span>
                     <h6>Starbucks</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo car2go-logo"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo car2go-logo"></span>
                     <h6>car2go</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo ets-logo"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo ets-logo"></span>
                     <h6>ÉTS</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo swiffer-logo"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo swiffer-logo"></span>
                     <h6>Swiffer</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo upa-logo-2"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo upa-logo-2"></span>
                     <h6>L'UPA</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo canada-logo-2"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo canada-logo-2"></span>
                     <h6>Global Affairs Canada</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo otis-logo-2"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo otis-logo-2"></span>
                     <h6>Otis Elevator</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo logo-proctorgamble"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo logo-proctorgamble"></span>
                     <h6>Proctor &amp; Gamble</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo bbdo-logo"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo bbdo-logo"></span>
                     <h6>BBDO</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo citizenrelations-logo"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo citizenrelations-logo"></span>
                     <h6>Citizen Relations</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo logo-station16"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo logo-station16"></span>
                     <h6>Station 16 Gallery</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo redcross-logo"></span>
-                    <h6>Red Cross</h6>
-                </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo mtlblog-logo"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo mtlblog-logo"></span>
                     <h6>MTL Blog</h6>
                 </li>
 
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo suite88-logo"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo suite88-logo"></span>
                     <h6>Suite 88 Chocolatier</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo mariouomo-logo"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo mariouomo-logo"></span>
                     <h6>Mario Uomo</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo tweetaide-logo"></span>
+                <li class="col-xs-6 col-sm-3"><span class="client-logo tweetaide-logo"></span>
                     <h6>Tweetaide</h6>
                 </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo kevric-logo"></span>
-                    <h6>Kevric</h6>
-                </li>
-                <li class="col-xs-6 col-sm-3 col-md-2"><span class="client-logo logo-kalooba"></span>
+
+                <li class="col-xs-6 col-sm-3"><span class="client-logo logo-kalooba"></span>
                     <h6>Kalooba</h6>
                 </li>
             </ul>
