60% complete for 1st montreal portfolio content, time to test

--- a/projects/montreal-cityline-illustration.html
+++ b/projects/montreal-cityline-illustration.html
@@ -16,6 +16,7 @@
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/font-awesome.css" rel="stylesheet">
     <link href="../css/zoom.css" rel="stylesheet">
+    <link href="../css/atvImg.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -52,69 +53,71 @@
     </nav>
 
     <!-- champion image -->
-    <div class="project-jumbotron project-montreal-cityline-img">
-
-
-    </div>
+    <div class="project-jumbotron project-montreal-cityline-img"></div>
 
 
     <div class="container">
 
         <!-- Jumbotron section -->
-
-        <div class="row">
-            <div class="container">
-                <p class="cta-back">
-                    <a href="../index.html#selectedProjects" role="button">Back to projects</a>
-                </p>
-                <h1>Montréal CityLine Illustration</h1>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium corrupti ab sapiente quas, aperiam, ducimus ut qui laudantium eveniet atque harum dolore ipsum voluptas ea modi vel dolor nostrum ullam.</h4>
-            </div>
-        </div>
-
-
-        <!-- Portfolio section -->
-
         <section class="portfolio-content">
 
             <div class="row">
-
-                <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <h3>Title Half</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
-                </div>
-                <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <h3>Title Half</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
+                <div class="col-md-8 col-md-offset-2">
+                    <p class="cta-back">
+                        <a href="../index.html#selectedProjects" role="button">Back to projects</a>
+                    </p>
+                    <h1>Montréal CityLine</h1>
+                    <p>In the Summer of 2013, one of my best friends moved into his brand new apartment and was looking to add a piece of art that would represent our favourite city, Montreal. He contacted me and asked me to design this illustration which would be prominently hung in his living room. I agreed and asked that he provide me with landmarks and elements that he considered Montreal-worthy.</p>
+                    <p>I created this colorful piece which is exactly what Montreal is about. This illustration defines a huge part of me, my style as an artist and is licensed for apparel production by <a href="http://kalooba.ca">Kalooba</a>, a sister company of mine.</p>
                 </div>
                 <div class="col-sm-12">
-                    <h3>Title Full</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum repellendus similique quidem eaque voluptas, aut velit excepturi. Unde rerum, quod quis iure ex, cum voluptas fuga consequuntur minima quisquam voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi minima fuga, voluptas nobis nostrum pariatur hic, placeat reprehenderit dolorem culpa, mollitia vero tempora inventore quod laboriosam quidem odio deserunt reiciendis.</p>
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
+                    <div class="tile atvImg">
+                        <img src="flat.jpeg">
+                        <div class="atvImg-layer" data-img="../img/tiles/mtl-bg.png"></div>
+                        <div class="atvImg-layer" data-img="../img/tiles/mtl-back.png"></div>
+                        <div class="atvImg-layer" data-img="../img/tiles/mtl-middle.png"></div>
+                        <div class="atvImg-layer" data-img="../img/tiles/mtl-front.png"></div>
+                    </div>
+                </div>
+                <div class="col-md-8 col-md-offset-2">
+                    <h3>Simplicity of the CityLine</h3>
+                    <p>The style presents bold lines married to circular anchors that hold the design together. Since the creation of the Montreal design, I have illustrated CityLines for several other cities such as Toronto and Ottawa. I also created one for Canada.</p>
                 </div>
                 <div class="col-sm-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi vel totam labore, magni optio amet illo corporis sequi unde. Ex dicta, mollitia temporibus officia exercitationem! Blanditiis quos iusto dicta et.</p>
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
+                    <img class="img-responsive img-portfolio hidden-xs" src="../img/portfolio/montreal-cityline.jpg" data-action="zoom" alt="montreal-cityline-illustration-by-loogart" title="Montreal Cityline Illustration by Loogart">
+                    <img class="img-responsive visible-xs" src="../img/portfolio/montreal-cityline-zoom.jpg">
+                    <div class="scroll visible-xs">
+                        <img class="" src="../img/portfolio/montreal-cityline.jpg" style="height:320px">
+                    </div>
+                    <img class="img-responsive img-portfolio hidden-xs" src="../img/portfolio/toronto-cityline.jpg" data-action="zoom" alt="toronto-cityline-illustration-by-loogart" title="Toronto Cityline Illustration by Loogart">
+                    <img class="img-responsive img-portfolio visible-xs" src="../img/portfolio/toronto-cityline-zoom.jpg" data-action="zoom" alt="toronto-cityline-illustration-by-loogart-zoom" title="Toronto Cityline Illustration by Loogart">
+                    <img class="img-responsive img-portfolio hidden-xs" src="../img/portfolio/ottawa-cityline.jpg" data-action="zoom" alt="ottawa-cityline-illustration-by-loogart" title="Ottawa Cityline Illustration by Loogart">
+                    <img class="img-responsive img-portfolio visible-xs" src="../img/portfolio/ottawa-cityline-zoom.jpg" data-action="zoom" alt="ottawa-cityline-illustration-by-loogart-zoom" title="Ottawa Cityline Illustration by Loogart">
+                    <img class="img-responsive img-portfolio hidden-xs" src="../img/portfolio/canada-cityline.jpg" data-action="zoom" alt="canada-cityline-illustration-by-loogart" title="Canada Cityline Illustration by Loogart">
+                    <img class="img-responsive img-portfolio visible-xs" src="../img/portfolio/canada-cityline-zoom.jpg" data-action="zoom" alt="canada-cityline-illustration-by-loogart zoom" title="Canada Cityline Illustration by Loogart">
                 </div>
+                <div class="col-md-8 col-md-offset-2">
+                    <h3>Collabo with Kalooba</h3>
+                    <p>Apparel and accessories are sold online at <a href="http://kalooba.ca">Kalooba</a> and at the respective airports in Montreal, Toronto and Ottawa.</p>
+                </div>
+                <div class="col-sm-8">
+                    <img class="img-responsive img-portfolio" src="../img/portfolio/montreal-cityline-mug-1.jpg" data-action="zoom" alt="montreal-cityline-mug-by-loogart-and-kalooba" title="Montreal CityLine Mug by Loogart x Kalooba">
+                    <div class="col-sm-6">
+                        <img class="img-responsive img-portfolio" src="../img/portfolio/montreal-cityline-tote-black.png" data-action="zoom" alt="montreal-cityline-black-tote-bag-by-loogart-and-kalooba" title="Montreal CityLine Black Tote Bag by Loogart x Kalooba">
+                    </div>
+                    <div class="col-sm-6">
+                        <img class="img-responsive img-portfolio" src="../img/portfolio/montreal-cityline-tote-white.png" data-action="zoom" alt="montreal-cityline-white-tote-bag-by-loogart-and-kalooba" title="Montreal CityLine White Tote Bag by Loogart x Kalooba">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <img class="img-responsive img-portfolio" src="../img/portfolio/montreal-cityline-pillow-white.png" data-action="zoom" alt="montreal-cityline-pillow-case-by-loogart-and-kalooba" title="Montreal CityLine Pillow Case by Loogart x Kalooba">
+                    <img class="img-responsive img-portfolio" src="../img/portfolio/montreal-cityline-white-tshirt.jpg" data-action="zoom" alt="montreal-cityline-t-shirt-by-loogart-and-kalooba" title="Montreal CityLine T-Shirt by Loogart x Kalooba">
+                </div>
+                <div class="clearfix"></div>
                 <div class="col-sm-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
                 </div>
 
 
-            </div>
-
-        </section>
-
-
-        <!-- Portfolio scroller section -->
-
-        <section class="portfolio-content">
-            <div class="row">
                 <div class="container">
                     <h3>Photography of final project</h3>
                     <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ipsa itaque ipsum velit quam officiis repudiandae molestiae, laborum voluptatibus tenetur, reiciendis, neque iure possimus perspiciatis obcaecati consectetur facere. Distinctio, provident!</h4>
@@ -195,6 +198,7 @@
     <script src="../js/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/zoom.min.js"></script>
+    <script src="../js/atvImg-min.js"></script>
     <script src="../js/loogart.js"></script>
 </body>
 
