mobile optimizations for portfolio content montreal cityline

--- a/projects/montreal-cityline-illustration.html
+++ b/projects/montreal-cityline-illustration.html
@@ -68,11 +68,12 @@
                     </p>
                     <h1>Montréal CityLine</h1>
                     <p>In the Summer of 2013, one of my best friends moved into his brand new apartment and was looking to add a piece of art that would represent our favourite city, Montreal. He contacted me and asked me to design this illustration which would be prominently hung in his living room. I agreed and asked that he provide me with landmarks and elements that he considered Montreal-worthy.</p>
-                    <p>I created this colorful piece which is exactly what Montreal is about. This illustration defines a huge part of me, my style as an artist and is licensed for apparel production by <a href="http://kalooba.ca">Kalooba</a>, a sister company of mine.</p>
+                    <p>I created this colorful piece which is exactly what Montreal is about. This illustration defines a huge part of me, my style as an artist and is licensed for apparel production by <a href="http://kalooba.ca" target="_blank">Kalooba</a>, a sister company of mine.</p>
                 </div>
-                <div class="col-sm-12">
-                    <div class="tile atvImg">
-                        <img src="flat.jpeg">
+                <div class="col-md-8 col-md-offset-2">
+                    <img src="../img/portfolio/montreal-cityline-zoom.jpg" class="img-responsive visible-xs">
+                    <div class="tile atvImg hidden-xs">
+                        <img src="../img/portfolio/montreal-cityline-zoom.jpg">
                         <div class="atvImg-layer" data-img="../img/tiles/mtl-bg.png"></div>
                         <div class="atvImg-layer" data-img="../img/tiles/mtl-back.png"></div>
                         <div class="atvImg-layer" data-img="../img/tiles/mtl-middle.png"></div>
@@ -85,9 +86,9 @@
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive img-portfolio hidden-xs" src="../img/portfolio/montreal-cityline.jpg" data-action="zoom" alt="montreal-cityline-illustration-by-loogart" title="Montreal Cityline Illustration by Loogart">
-                    <img class="img-responsive visible-xs" src="../img/portfolio/montreal-cityline-zoom.jpg">
                     <div class="scroll visible-xs">
-                        <img class="" src="../img/portfolio/montreal-cityline.jpg" style="height:320px">
+                        <h5><i class="fa fa-angle-double-left" aria-hidden="true"></i> Scroll left</h5>
+                        <img class="" src="../img/portfolio/montreal-cityline.jpg" style="height:420px">
                     </div>
                     <img class="img-responsive img-portfolio hidden-xs" src="../img/portfolio/toronto-cityline.jpg" data-action="zoom" alt="toronto-cityline-illustration-by-loogart" title="Toronto Cityline Illustration by Loogart">
                     <img class="img-responsive img-portfolio visible-xs" src="../img/portfolio/toronto-cityline-zoom.jpg" data-action="zoom" alt="toronto-cityline-illustration-by-loogart-zoom" title="Toronto Cityline Illustration by Loogart">
@@ -98,7 +99,7 @@
                 </div>
                 <div class="col-md-8 col-md-offset-2">
                     <h3>Collabo with Kalooba</h3>
-                    <p>Apparel and accessories are sold online at <a href="http://kalooba.ca">Kalooba</a> and at the respective airports in Montreal, Toronto and Ottawa.</p>
+                    <p>Apparel and accessories are sold online at <a href="http://kalooba.ca" target="_blank">Kalooba</a> and at the respective airports in Montreal, Toronto and Ottawa.</p>
                 </div>
                 <div class="col-sm-8">
                     <img class="img-responsive img-portfolio" src="../img/portfolio/montreal-cityline-mug-1.jpg" data-action="zoom" alt="montreal-cityline-mug-by-loogart-and-kalooba" title="Montreal CityLine Mug by Loogart x Kalooba">
@@ -112,25 +113,6 @@
                 <div class="col-sm-4">
                     <img class="img-responsive img-portfolio" src="../img/portfolio/montreal-cityline-pillow-white.png" data-action="zoom" alt="montreal-cityline-pillow-case-by-loogart-and-kalooba" title="Montreal CityLine Pillow Case by Loogart x Kalooba">
                     <img class="img-responsive img-portfolio" src="../img/portfolio/montreal-cityline-white-tshirt.jpg" data-action="zoom" alt="montreal-cityline-t-shirt-by-loogart-and-kalooba" title="Montreal CityLine T-Shirt by Loogart x Kalooba">
-                </div>
-                <div class="clearfix"></div>
-                <div class="col-sm-12">
-                </div>
-
-
-                <div class="container">
-                    <h3>Photography of final project</h3>
-                    <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ipsa itaque ipsum velit quam officiis repudiandae molestiae, laborum voluptatibus tenetur, reiciendis, neque iure possimus perspiciatis obcaecati consectetur facere. Distinctio, provident!</h4>
-                    <div class="scroll">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                    </div>
                 </div>
             </div>
         </section>
