adjusted in portfolio nav, fonts and some html structure

--- a/projects/montreal-cityline-illustration.html
+++ b/projects/montreal-cityline-illustration.html
@@ -57,15 +57,19 @@
 
 
     <div class="container">
-
+        <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                <p class="cta-back">
+                    <a href="../index.html#selectedProjects" role="button">Back to projects</a>
+                </p>
+            </div>
+        </div>
         <!-- Jumbotron section -->
         <section class="portfolio-content">
 
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <p class="cta-back">
-                        <a href="../index.html#selectedProjects" role="button">Back to projects</a>
-                    </p>
+
                     <h1>Montréal CityLine</h1>
                     <p>In the Summer of 2013, one of my best friends moved into his brand new apartment and was looking to add a piece of art that would represent our favourite city, Montreal. He contacted me and asked me to design this illustration which would be prominently hung in his living room. I agreed and asked that he provide me with landmarks and elements that he considered Montreal-worthy.</p>
                     <p>I created this colorful piece which is exactly what Montreal is about. This illustration defines a huge part of me, my style as an artist and is licensed for apparel production by <a href="http://kalooba.ca" target="_blank">Kalooba</a>, a sister company of mine.</p>
