cleaned up code portfolio

--- a/projects/montreal-cityline-illustration.html
+++ b/projects/montreal-cityline-illustration.html
@@ -55,16 +55,18 @@
     <!-- champion image -->
     <div class="project-jumbotron project-montreal-cityline-img"></div>
 
-
     <div class="container">
+       
+        <!-- back to home page -->
         <div class="row">
-                <div class="col-md-8 col-md-offset-2">
+            <div class="col-md-8 col-md-offset-2">
                 <p class="cta-back">
                     <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
             </div>
         </div>
-        <!-- Jumbotron section -->
+        
+        <!-- Content section -->
         <section class="portfolio-content">
 
             <div class="row">
@@ -121,8 +123,7 @@
             </div>
         </section>
 
-        <!-- in-portfolio navigation -->
-
+        <!-- back to home page -->
         <div class="row">
             <div class="container">
                 <p class="cta-back">
