--- a/projects/montreal-cityline-illustration.html
+++ b/projects/montreal-cityline-illustration.html
@@ -73,8 +73,7 @@
                 <div class="col-md-8 col-md-offset-2">
 
                     <h1>Montréal CityLine</h1>
-                    <p>In the Summer of 2013, one of my best friends moved into his brand new apartment and was looking to add a piece of art that would represent our favourite city, Montreal. He contacted me and asked me to design this illustration which would be prominently hung in his living room. I agreed and asked that he provide me with landmarks and elements that he considered Montreal-worthy.</p>
-                    <p>I created this colorful piece which is exactly what Montreal is about. This illustration defines a huge part of me, my style as an artist and is licensed for apparel production by <a href="http://kalooba.ca" target="_blank">Kalooba</a>, a sister company of mine.</p>
+                    <p>Illustration created to feature Montreal's popular landmarks and elements in the simplest way.</p>
                 </div>
                 <div class="col-md-8 col-md-offset-2">
                     <img src="../img/portfolio/montreal-cityline-zoom.jpg" class="img-responsive visible-xs">
@@ -87,15 +86,17 @@
                     </div>
                 </div>
                 <div class="col-md-8 col-md-offset-2">
-                    <h3>Simplicity of the CityLine</h3>
-                    <p>The style presents bold lines married to circular anchors that hold the design together. Since the creation of the Montreal design, I have illustrated CityLines for several other cities such as Toronto and Ottawa. I also created one for Canada.</p>
+                    <h3>Style</h3>
+                    <p>Bold lines are married to circular anchors that hold the design together. CityLine designs for several other locations have been created as well.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive img-portfolio hidden-xs" src="../img/portfolio/montreal-cityline.jpg" data-action="zoom" alt="montreal-cityline-illustration-by-loogart" title="Montreal Cityline Illustration by Loogart">
                     <div class="scroll visible-xs">
                         <h5><i class="fa fa-angle-double-left" aria-hidden="true"></i> Scroll left</h5>
-                        <img class="" src="../img/portfolio/montreal-cityline.jpg" style="height:420px">
+                        <img class="" src="../img/portfolio/montreal-cityline-zoom.jpg" style="width:100%" alt="montreal-cityline-illustration-by-loogart-zoom" title="Montreal Cityline Illustration by Loogart">
+                        <img class="" src="../img/portfolio/montreal-cityline.jpg" style="height:420px" alt="montreal-cityline-illustration-by-loogart" title="Montreal Cityline Illustration by Loogart">
                     </div>
+                    
                     <img class="img-responsive img-portfolio hidden-xs" src="../img/portfolio/toronto-cityline.jpg" data-action="zoom" alt="toronto-cityline-illustration-by-loogart" title="Toronto Cityline Illustration by Loogart">
                     <img class="img-responsive img-portfolio visible-xs" src="../img/portfolio/toronto-cityline-zoom.jpg" data-action="zoom" alt="toronto-cityline-illustration-by-loogart-zoom" title="Toronto Cityline Illustration by Loogart">
                     <img class="img-responsive img-portfolio hidden-xs" src="../img/portfolio/ottawa-cityline.jpg" data-action="zoom" alt="ottawa-cityline-illustration-by-loogart" title="Ottawa Cityline Illustration by Loogart">
@@ -105,7 +106,7 @@
                 </div>
                 <div class="col-md-8 col-md-offset-2">
                     <h3>Collabo with Kalooba</h3>
-                    <p>Apparel and accessories are sold online at <a href="http://kalooba.ca" target="_blank">Kalooba</a> and at the respective airports in Montreal, Toronto and Ottawa.</p>
+                    <p>Apparel and accessories are sold online at <a href="http://kalooba.ca" target="_blank">Kalooba</a> and various points of sales in Canada.</p>
                 </div>
                 <div class="col-sm-8">
                     <img class="img-responsive img-portfolio" src="../img/portfolio/montreal-cityline-mug-1.jpg" data-action="zoom" alt="montreal-cityline-mug-by-loogart-and-kalooba" title="Montreal CityLine Mug by Loogart x Kalooba">
