fixed parallax for content

--- a/projects/montreal-cityline-illustration.html
+++ b/projects/montreal-cityline-illustration.html
@@ -53,8 +53,7 @@
     </nav>
 
     <!-- champion image -->
-    <div class="project-jumbotron project-montreal-cityline-img" data-parallax="scroll" data-image-src="../img/portfolio/montreal-cityline.jpg"></div>
-    <!--<div class="project-jumbotron project-montreal-cityline-img"></div>-->
+    <div class="project-jumbotron project-montreal-cityline-img" data-parallax="scroll" data-image-src="../img/portfolio/montreal-cityline-header1.jpg"></div>
 
     <div class="container">
 
@@ -73,11 +72,7 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h1>Montréal CityLine</h1>
-                    <p>Illustration created to feature Montreal's popular landmarks and elements in the simplest way.</p>
-                </div>
-                <div class="col-md-8 col-md-offset-2">
-                    <h3>Style</h3>
-                    <p>Bold lines are married to circular anchors that hold the design together. CityLine designs for several other locations have been created as well.</p>
+                    <p>Illustration created to feature Montreal's popular landmarks and elements in the simplest way. Bold lines are married to circular anchors that hold the design together. </p>
                 </div>
 
                 <!-- montreal cityline -->
