--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Loogart is a visual design studio that specializes in illustration, brand identity, small-scale animation and web design. Our work is featured in Montreal, Toronto, Ottawa and Gatineau.">
     <meta name="author" content="Chris Soueidan of Loogart">
+    <meta property="og:title" content="Loogart" />
+    <meta property="og:description" content="Loogart: Visual Design Studio" />
+    <meta property="og:url" content="http://loogart.com/" />
+    <meta property="og:image” content=”img/loogart-screenshot.jpg" />
     <link rel="icon" href="../../favicon.ico">
 
     <title>Illustration, brand identity and web design | Loogart</title>
